Further project structure changes

--- a/TMCompiler/CMakeLists.txt
+++ b/TMCompiler/CMakeLists.txt
@@ -4,30 +4,37 @@
 cmake_minimum_required(VERSION 3.22.0)
 
 # description of project, as well as executable name
-project(tmCompilation
+project(compile
 	VERSION 1.0
-	DESCRIPTION "Convert Java-like code into a multi-tape Turing Machine"
+	DESCRIPTION "Convert C++-like code into a multi-tape Turing Machine"
 	LANGUAGES CXX)
 
 # generate executable "tmCompilation" from the following files
-add_executable(tmCompilation	
-	src/tm_definition/constants.hpp
-	src/tm_definition/tape.hpp
-	src/tm_definition/tape.cpp
-	src/tm_definition/transition.hpp
-	src/tm_definition/transition.cpp
-	src/tm_definition/turing_machine.hpp
-	src/tm_definition/single_tape_turing_machine.hpp
-	src/tm_definition/single_tape_turing_machine.cpp
-	src/tm_definition/multi_tape_turing_machine.hpp
-	src/tm_definition/multi_tape_turing_machine.cpp
-	src/tm_definition/runner.cpp)
+add_executable(${CMAKE_PROJECT_NAME}
+	TMCompiler/utils/constants.hpp
+	TMCompiler/utils/helper.hpp
+	TMCompiler/utils/helper.cpp
+	TMCompiler/tm_definition/tape.hpp
+	TMCompiler/tm_definition/tape.cpp
+	TMCompiler/tm_definition/transition.hpp
+	TMCompiler/tm_definition/transition.cpp
+	TMCompiler/tm_definition/multi_tape_turing_machine.hpp
+	TMCompiler/tm_definition/multi_tape_turing_machine.cpp
+	TMCompiler/compilation/compile.hpp
+	TMCompiler/compilation/compile.cpp
+	TMCompiler/compilation/multi_tape_builder.hpp
+	TMCompiler/compilation/multi_tape_builder.cpp
+	TMCompiler/compilation/unit1.hpp
+	TMCompiler/compilation/unit1.cpp
+	TMCompiler/compilation/unit2.hpp
+	TMCompiler/compilation/unit2.cpp
+	)
 
-# add properties to the executable: set c++=std_11, as well as compilation options -Wall,... for coding standards
-target_compile_features(tmCompilation PRIVATE cxx_std_11)
+# add properties to the executable: set c++=std_14, as well as compilation options -Wall,... for coding standards
+target_compile_features(tmCompilation PRIVATE cxx_std_14)
 target_compile_options(tmCompilation PRIVATE -Wall -Wextra -Wpedantic)
 
 # to run: enter folder "build", type "cmake .." to run this CMakeList, 
 # and then type "make help" to see the options in the Makefile
 # Usually, would just run "make" to generate the executable
-# then "./tmCompilation" to run (assuming no errors generated)
+# then "./compile" to run (assuming no errors generated)
