--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,18 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
-*.slo
-*.lo
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Compiled Dynamic libraries
 *.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
 
 # Compiled Static libraries
-*.lai
-*.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
-*.app
 
 # CMAKE build folder
 build*/
+
+# Vim swap file
 *.swp
-*.json
