Update Makefile and CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
+# Steps to build with CMake:
+# mkdir build
+# cd build
+# cmake -S .. -B .
+# make
+
 cmake_minimum_required(VERSION 3.12)
 
 project(TMCompiler
@@ -8,8 +14,10 @@ project(TMCompiler
 
 add_executable(tmc
 	main.cpp
+	TMCompiler/compiler/compiler.cpp
+	TMCompiler/compiler/front_end/bnf_parser.cpp
 	TMCompiler/compiler/front_end/earley_parser.cpp
-	TMCompiler/compiler/models/bnf_parser.cpp
+	TMCompiler/compiler/models/grammar.cpp
 	TMCompiler/utils/logger/logger.cpp
 )
 
