--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ python = "^3.8"
 rich = "^13.7.0"
 black = "^23.11.0"
 mypy = "^1.7.1"
-typer = "^0.9.0"
 ruff = "^0.1.6"
+pre-commit = "<3.6.0"	# 3.6.0 requires Python 3.9
 
 # install Poetry: https://python-poetry.org/docs/#installation
 # activate virtual environment with "source .venv/bin/activate"
